Changelog 9-29-2024, Alex Myska
    Cell.py:
        - Added a date and author headline
        - Implemented Cell
        - Implemented BlockedCell
        - Implemented LetterCell
        - Implemented IndexCell
        - Implemented HybridCell
    Grid.py:
        - Added a date and author headline
        - Implemented new Grid class
        - Defined functions for the grid
        - Implemented __str__
    README.md:
        - Added Brandon Knautz as an author
    changes.txt:
        - Created a changelog to be used when many changes are made at once
        - The changelog should give a brief description of the changes made, and by who

Changelog 9-30-2024, Alex Myska
    Cell.py:
        - Changed name of "length" field in IndexCell to "wordLength" to avoid confusion
    Grid.py:
        - Implemented findBody
        - Implemented findIntersections
        - Changed syntax of past functions to work properly
    version1.py:
        - Changed the file into a test file

Changelog 10-1-2024, Alex Myska
    version1.py
        - Added test methods
        - Edited Grid.py and Cell.py to conform to intended behavior